objects/Content_Whats_Trending__c.object
<CustomObject>
    <fields>
        <fullName>ContentVersionID__c</fullName>
        <label>ContentVersionID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contentUrl__c</fullName>
        <label>contentUrl</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fileType__c</fullName>
        <label>fileType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This object is used storing the content Trend information</description>
    <label>zzContent_Whats_Trending</label>
    <nameField>
        <label>Content_Whats_Trending Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content_Whats_Trendings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>